# topic-modeling-101

./: README.md  clustering.md  clustering.py  clusters.json  experiments.ipynb  ner_taxonomy.md  ner_taxonomy.py  pyproject.toml  taxonomy.json
data/: earnings_call.txt  earnings_call2.txt
src/cimba/: __init__.py  embeddings.py  openai_client.py  schemas.py  similarity.py
src/cimba/clustering/: __init__.py  clusterer.py  index.py  llm_layers.py  sanity_checker.py  schemas.py
src/cimba/ner/: __init__.py  prompts.py  schemas.py  taxonomy.py  tfidf_extractor.py  topic_clusterer.py
src/utils/: misc_utils.py
tests/: __init__.py  conftest.py  test_clustering.py  test_embeddings.py  test_ner.py  test_openai_client.py  test_sample.py  test_schemas.py  test_similarity.py
